{
    "name": "TestInputs",
    "maps": [
        {
            "name": "main",
            "id": "a502e697-3ed0-4131-94f3-db5bdc5c8e2e",
            "actions": [
                {
                    "name": "saveAnswer",
                    "type": "Button",
                    "id": "edd3f1d3-0a55-406a-b80f-1ea0e96363ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "backToPrevious",
                    "type": "Button",
                    "id": "272954f6-7543-439c-8a12-4e5552d92b5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleActionsVisibility",
                    "type": "Button",
                    "id": "689f863c-1955-4adf-8623-faa10af55b09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Navigation",
                    "type": "Value",
                    "id": "3731cf68-3479-475d-a0c7-c280d3d5f015",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleSummery",
                    "type": "Button",
                    "id": "af93bbea-0b6a-47c7-a3cb-6ffc05710233",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "navkey",
                    "type": "Button",
                    "id": "3ae01625-0f26-46ae-adbd-6fe45ac06d95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "pause",
                    "type": "Button",
                    "id": "286c57de-c060-4023-9ba0-9234b30b1dad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bd416266-4fa3-4f40-8137-5205dcfc599a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "saveAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "920b3f37-30fa-401b-9328-6ca084a3971a",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "saveAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fd9feb7-7fcc-4753-9186-dd4b09369bb3",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "backToPrevious",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15041fbd-97a5-4f9a-8120-a46222361aca",
                    "path": "<Keyboard>/#(B)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "backToPrevious",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfa24175-7412-4485-9a61-1cc976feb430",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActionsVisibility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fb60729-40bf-46e6-bde6-e713c8311105",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActionsVisibility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79e1e4a0-0d5d-4f44-b073-0b2764c91d64",
                    "path": "*/{Primary2DAxis}",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Navigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f91ca08f-ba6e-4a7e-ae35-2b9ec405df57",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1dccf7a8-80c6-43bf-8e37-5fa50f2eec34",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ffb03494-fa2e-4c74-bfeb-a148004f8a62",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "abaea4e7-5067-4680-8216-3be9497a8c49",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "63a6e79e-9dc0-4214-a517-b284cc93d03e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "02218016-f9ce-4bb7-9521-925a9202e8bc",
                    "path": "<XRController>{RightHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSummery",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea68f8d0-cfea-48f4-a35f-8116b62e76a0",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSummery",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dfb54b5-157b-4d44-b4b7-bbd2fd5f8ce9",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "navkey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c424a20-3c96-478a-bde7-5d698c5265f6",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}